--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "fs-extra": "^10.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "reflect-metadata": "^0.1.13",
     "twitter-api-v2": "^1.10.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.13",
-    "reflect-metadata": "^0.1.13"
+    "@types/node": "^17.0.13"
   }
 }
